Fixes issue #386
Made navbar completely responsible. Now it won't overlap with the logo or come to the next line.

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -458,7 +458,7 @@ p a,
 nav .logo {
   max-height: 45px;
   max-width: 110px;
-  position: absolute;
+  position: relative;
   top: 0px;
   opacity: 1;
 }
